--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="iconos/aire.png" type="image/x icon">
 
     <link rel="stylesheet" href="css/style.css">
 
     <meta name="description" content="La app para visitar Buenos Aires a tu ritmo. Recorrer los mejores lugares turísticos y culturales imperdibles. Top 10 atracciones en Buenos Aires.">
     <meta name="keywords" content="turismo, Buenos Aires, BA, visitar, visita guiada, tour, free walking tour, gratis, top ten, lugares"
 
-    <!-- Google fonts -->
-    <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,800;0,900;1,600&display=swap"
-    rel="stylesheet"/>
-    
     <!-- CSS de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
+
+
     <title>Buenos Aires: Visitar lugares turísticos de Buenos Aires</title>
 </head>
 
@@ -141,8 +141,8 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <div class="row py-3 text-center">Seguinos</div>
-                    <div class="row align-items-center justify-content-between">
+                    <div class="row py-3 d-flex justify-content-center">Seguinos</div>
+                    <div class="row d-flex justify-content-between">
                         <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
                         <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
                     </div>
