--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="iconos/aire.png" type="image/x icon">
 
     <link rel="stylesheet" href="css/style.css">
     
@@ -69,8 +70,8 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <div class="row py-3 text-center">Seguinos</div>
-                    <div class="row align-items-center justify-content-between">
+                    <div class="row py-3 d-flex justify-content-center">Seguinos</div>
+                    <div class="row d-flex justify-content-between">
                         <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
                         <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
                     </div>
