--- a/recorridos.html
+++ b/recorridos.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="iconos/aire.png" type="image/x icon">
 
     <link rel="stylesheet" href="css/style.css">
+
     
     <!-- CSS de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -122,8 +124,8 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <div class="row py-3 text-center">Seguinos</div>
-                    <div class="row align-items-center justify-content-between">
+                    <div class="row py-3 d-flex justify-content-center">Seguinos</div>
+                    <div class="row d-flex justify-content-between">
                         <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
                         <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
                     </div>
